--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -242,7 +242,7 @@
     </div>
 
 
-<div class="row">
+@*<div class="row">
 <footer class="text-center" style="background: #E9E9E9;">
   <div style="height:120px;  bottom: 0;
     color: #707070;
@@ -338,12 +338,12 @@
 
           </div>
       </div>
-
+*@
     @*© 2021 Copyright:
     <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>*@
-  </div>
-</footer>
-</div>
+  @*</div>*@
+@*</footer>
+</div>*@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
