--- a/test/Views/Identity/Posts.cshtml
+++ b/test/Views/Identity/Posts.cshtml
@@ -75,7 +75,7 @@
                                 <select asp-for="Id" asp-items="@Model.Posts" class="form-control"></select>
                             </div>
                             <div class="col">
-                                <button type="submit" class="btn btn-danger"> რედაქტირება</button>
+                                <button type="submit" class="btn btn-warning"> რედაქტირება</button>
                             </div>
                         </div>
                     </form>
