show main info on main page

--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -135,6 +135,43 @@
                         </div>
                     }
                     </div>
+
+                    <div class="row" style="bottom:0px;">
+            <div class="col-sm">
+                <p style="font-family: 'Roboto';
+                            font-style: normal;
+                            font-weight: 800;
+                            font-size: 13px;
+                            line-height: 19px;
+                            /* or 146% */
+
+
+                            color: #626262;">ტურიზმის ეროვნული ადმინისტრაციის ცხელი ხაზი <br> <span style="color:darkblue">144-3</span></p>
+            </div>
+            <div class="col-sm">
+                <p style="font-family: 'Roboto';
+                            font-style: normal;
+                            font-weight: 800;
+                            font-size: 13px;
+                            line-height: 19px;
+                            /* or 146% */
+
+
+                            color: #626262;">უკრაინის საელჩო საქართველოში  <br> <span style="color:darkblue">032 231 11 61</span> </p>
+            </div>
+           <div class="col-sm">
+                <p style="font-family: 'Roboto';
+                            font-style: normal;
+                            font-weight: 800;
+                            font-size: 13px;
+                            line-height: 19px;
+                            /* or 146% */
+
+
+                            color: #626262;">საზოგადოებრივი უსაფრთხოების მართვის ცენტრი   <br> <span style="color:darkblue">112</span> </p>
+            </div>
+           <div class="col-sm"></div>
+        </div>
                 }
                 else
                 {
@@ -166,6 +203,8 @@
                     </div>
                 }
             </div>
+            
         </div>
+        
     </div>
 </div>
