--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -241,6 +241,9 @@
         </main>
     </div>
 
+    @*<div class="row" style="background: red;">
+    </div>
+*@
 
 @*<div class="row">
 <footer class="text-center" style="background: #E9E9E9;">
