--- a/test/Views/Identity/EditPost.cshtml
+++ b/test/Views/Identity/EditPost.cshtml
@@ -71,3 +71,19 @@
     </div>
 </div>
 </div>
+
+<script src="https://cdn.ckeditor.com/ckeditor5/30.0.0/classic/ckeditor.js"></script>
+
+<script>
+    ClassicEditor
+        .create( document.querySelector( '#DescriptionUkrainian' ) )
+        .catch( error => {
+            console.error( error );
+        } );
+
+    ClassicEditor
+    .create(document.querySelector( '#DescriptionGeorgian' ) )
+    .catch( error => {
+        console.error( error );
+    } );
+</script>
