--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -286,7 +286,7 @@
         <div style="bottom: 0;
         color: #707070;
         left: 0;
-        position: relative;
+        position: fixed;
         font-size: small;
         width:100%;">
         <div class="row">
