--- a/test/Views/Home/PostInternalPage.cshtml
+++ b/test/Views/Home/PostInternalPage.cshtml
@@ -3,7 +3,7 @@
 
 <div class="row" style="height:100vh;">
 
-    <div class="col-md-3" style="background: #F8BF0C;">
+    <div class="col-md-3" style="background: #B9B9B9;">
 
         <div style="margin-top:30px;">
             @foreach (var category in Model.Categories)
@@ -58,10 +58,10 @@
 <script>
     window.onload = function() {
 
-        $("#faqP").css("color", "#62B9EF");
-        $("#mainPageP").css("color", "#62B9EF");
-        $("#contactsP").css("color", "#62B9EF");
-        $("#aboutUsP").css("color", "#62B9EF");
+        $("#faqP").css("color", "white");
+        $("#mainPageP").css("color", "white");
+        $("#contactsP").css("color", "white");
+        $("#aboutUsP").css("color", "white");
 
     };
 
