fix smaller screen issue

--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 
 <style>
     .textFont {
-        font-family: Spartan;
+        font-family: FiraGo-SemiBold;
         font-size: 18px;
         font-style: normal;
         font-weight: 500;
