remove 3 info texts from main page

--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="row" style="bottom:0px;">
-            <div class="col-sm">
+           @* <div class="col-sm">
                 <p style="font-family: 'Roboto';
                             font-style: normal;
                             font-weight: 800;
@@ -169,7 +169,7 @@
 
 
                             color: #626262;">@SharedLocalizer["Info3"]   <br> <span style="color:darkblue">112</span> </p>
-            </div>
+            </div>*@
            <div class="col-sm"></div>
         </div>
                 }
