--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
                                     <ul class="navbar-nav ">
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-                                                <p id="mainPageP" style="font-family: Roboto;
+                                                <p id="mainPageP" style="font-family: FiraGO-SemiBold;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
@@ -126,7 +126,7 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs">
-                                                <p id="aboutUsP" style="font-family: Roboto;
+                                                <p id="aboutUsP" style="font-family: FiraGO-SemiBold;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;  
@@ -139,7 +139,7 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacts">
-                                                <p id="contactsP" style="font-family: Roboto;
+                                                <p id="contactsP" style="font-family: FiraGO-SemiBold;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
@@ -152,7 +152,7 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FAQ">
-                                                <p id="faqP" style="font-family: Roboto;
+                                                <p id="faqP" style="font-family: FiraGO-SemiBold;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
@@ -165,7 +165,7 @@
                                         </li>
                                     </ul>
                                     <div class="d-flex">
-                                        <p style="font-family: Roboto;
+                                        <p style="font-family: FiraGO-SemiBold;
                                             font-size: 20px;
                                             font-style: normal;
                                             font-weight: 500;
