--- a/test/wwwroot/css/site.css
+++ b/test/wwwroot/css/site.css
@@ -35,7 +35,7 @@ html, body {
 
 
 .textFont {
-    font-family: Roboto;
+    font-family: FiraGO-SemiBold;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
@@ -46,7 +46,7 @@ html, body {
 }
 
 .textFontBold {
-    font-family: Roboto;
+    font-family: FiraGO-SemiBold;
     font-size: 21px;
     font-style: normal;
     font-weight: 700;
@@ -66,7 +66,7 @@ html, body {
 }
 
 .textStyle {
-    font-family: 'Roboto';
+    font-family: 'FiraGO-SemiBold';
     font-style: normal;
     font-weight: 700;
     font-size: 21px;
