--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 
 <style>
     .textFont {
-        font-family: FiraGo-SemiBold;
+        font-family: FiraGo-SemiBold !important;
         font-size: 18px;
         font-style: normal;
         font-weight: 500;
@@ -120,7 +120,9 @@
                         {
                             <div class="card-transparent mb-2">
                                 <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[2].Id})" style=" text-decoration: none;">
+                                    <div style="width:232px;height:146px;">
                                     <img class="card-img-top side-card-size" src="data:image/png;base64,@Model.Posts[2].ThumbnailBase64" alt="Card image cap">
+                                    </div>
                                     <div class="card-body">
                                         @if (Model.Culture == "uk")
                                         {
@@ -175,14 +177,14 @@
                 }
                 else
                 {
-                    <div class="row">
+                    <div class="row" id="categoriesRow">
 
                         @foreach (var post in @Model.Posts)
                         {
 
                             <div class="card-transparent" style="width: 16rem;">
                                 <a href="@Url.Action("PostInternalPage", "Home", new { id = post.Id})" style=" text-decoration: none;">
-                                    <img class="card-img-top" src="data:image/png;base64,@post.ThumbnailBase64" alt="Card image cap">
+                                    <img class="card-img-top" src="data:image/png;base64,@post.ThumbnailBase64" alt="Card image cap" style="width:232px;height:146px;">
                                     <div class="card-body">
                                         @if (Model.Culture == "uk")
                                         {
@@ -204,10 +206,10 @@
 
     </div>
 
-    @*<div class="row">
-        <div class=col-md-4>
+    <div class="row" style="background:#EEEEEE;">
+        <div class=col-md-3>
             <div class="row">
-                <col-sm>
+                <div style="position: relative; top:10px;margin-left: 15px;">
                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="183" height="55" fill="none" viewBox="0 0 183 55">
                   <path fill="#004990" d="M86.42 9.493v14.684c0 8.579-5.864 11.538-12.977 11.538-7.537 0-12.977-3.492-12.977-11.499V9.493h6.469v14.879c0 3.718 2.7 5.957 6.436 5.957 3.423 0 6.586-1.785 6.586-6.411V9.493h6.463zM109.068 16.215c-3.769-1.667-6.014-2.316-8.22-2.316-2.323 0-3.807.837-3.807 2.122 0 3.906 13.204 2.81 13.204 11.842 0 4.97-4.184 7.851-9.97 7.851-4.53 0-6.775-1.174-9.365-2.504v-5.58c3.73 2.465 6.014 3.341 8.87 3.341 2.474 0 3.808-.876 3.808-2.394 0-4.25-13.211-2.693-13.211-11.992 0-4.477 3.885-7.436 9.898-7.436 2.896 0 5.519.61 8.793 2.012v5.054z"/>
                   <path fill="#D31245" d="M140.957 35.377h-6.964l-2.128-5.12h-11.61l-1.94 5.12h-6.852L121.927 9.5h7.498l11.532 25.877zm-15.183-19.693l-3.808 10.057h7.992l-4.184-10.057zM150.283 9.493h-6.469v25.878h6.469V9.493zM167.295 9.493c9.475 0 14.35 5.879 14.35 12.978 0 7.436-4.719 12.9-15.073 12.9h-10.731V9.493h11.454zm-4.986 21.14h4.224c6.508 0 8.448-4.399 8.448-8.195 0-4.438-2.395-8.195-8.526-8.195h-4.152v16.39h.006z"/>
@@ -228,20 +230,50 @@
                       <use transform="scale(.00183 .00437)" xlink:href="#image0_28_9931"/>
                     </pattern>
                   </defs>
-                </svg>    
-            </col-sm>
-                <col-sm></col-sm>
+                </svg>
+                <div style="position:absolute; right:15px; top:0px;">
+                     <img src="~/content/images/EWMI.png" width="120px" height="50px;"/>
+                 </div>
+            </div>
                
 
             </div>
-
-
-            <div class="row">
-                <p> text</p>
+            
+            <div class="row" style="margin-top:10px">
+                <p style="font-size: 11px; margin-left: 20px;"> USAID-ის სამოქალაქო საზოგადოების ჩართულობის პროგრამა <br />USAID CIVIL SOCIETY ENGAGEMENT PROGRAM</p>
             </div>
 
+
         </div>
-    </div>*@
+
+        <div class="col-md-7">
+            <p style="font-family: 'Roboto';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 10px;
+                        line-height: 15px;
+                        margin-left: 20px;
+                        margin-top:10px;
+                        /* or 150% */
+
+                        letter-spacing: 0.1em;
+
+                        color: #626262;">ვებგვერდზე განთავსებული ინფორმაციის მოძიება და შეკრება შესაძლებელი გახდა ამერიკელი ხალხის გულუხვი დახმარების წყალობით, ამერიკის შეერთებული შტატების საერთაშორისო განვითარების სააგენტოს (USAID) დაფინანსებით. ვებგვერდზე განთავსებულ მასალაზე პასუსისმგებელია მხოლოდ საინიციატივო ჯგუფი და შესაძლოა არ გამოხატავდეს ამერიკის შეერთებული შტატების საერთაშორისო განვითარების სააგენტოს (USAID), აღმოსავლეთ-დასავლეთის მართვის ინსტიტუტის (EWMI), ან ამერიკის შეერთებული შტატების მთავრობის შეხედულებებს.</p>
+        </div>
+        <div class="col-md-2 justify-content-center">
+            <p  style="font-family: 'Roboto';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 10px;
+                        line-height: 15px;
+                        margin-top:20px;
+                        /* or 150% */
+
+                        letter-spacing: 0.1em;
+
+                        color: #626262;">© 2022 Dopomoga Ukraini</p>
+        </div>
+    </div>
 </div>
 
 @*
