--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
             </div>
             <div class="row" style="height:50px; background: #2791B6">
                 <div class="d-flex justify-content-end">
-                       <div style="width:30px; height:30px; margin-top:10px; margin-right:10px;" onclick="window.open('http://stackoverflow.com', '_blank');">
+                       <div style="width:30px; height:30px; margin-top:10px; margin-right:10px;" onclick="window.open('https://t.me/+ugrIKNOeRGAzMzVi', '_blank');">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 48 47">
                             <circle cx="23" cy="24" r="23" fill="white" />
                           <path fill="#fff" stroke="none" d="M23.554 46.5c-12.693 0-23-10.325-23-23s10.307-23 23-23c12.692 0 23 10.307 23 23 0 12.692-10.326 23-23 23zm0-45.217c-12.245 0-22.218 9.973-22.218 22.217 0 12.244 9.973 22.218 22.218 22.218 12.244 0 22.217-9.974 22.217-22.218S35.798 1.283 23.554 1.283z"/>
@@ -78,7 +78,7 @@
                         </svg>*@
                     </div>
 
-                    <div style="width:30px; height:30px; margin-top:10px; margin-right:10px;" onclick="window.open('http://stackoverflow.com', '_blank');">
+                    <div style="width:30px; height:30px; margin-top:10px; margin-right:10px;" onclick="window.open('https://instagram.com/dopomoga.ge?utm_medium=copy_link', '_blank');">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 48 47">
                             <circle cx="23" cy="24" r="23" fill="white" />
                           <path fill="#fff" stroke="none" d="M24.344 46.5c-12.675 0-23-10.308-23-23 0-12.693 10.307-23 23-23 12.692 0 23 10.307 23 23 0 12.692-10.326 23-23 23zm0-45.217c-12.245 0-22.218 9.973-22.218 22.217 0 12.244 9.973 22.218 22.218 22.218 12.244 0 22.217-9.974 22.217-22.218S36.588 1.283 24.344 1.283z"/>
@@ -87,7 +87,7 @@
                         </svg>
                     </div>
 
-                    <div style="width:30px; height:30px; margin-top:10px; margin-right:30px;" onclick="window.open('http://stackoverflow.com', '_blank');">
+                    <div style="width:30px; height:30px; margin-top:10px; margin-right:30px;" onclick="window.open('https://www.facebook.com/www.dopomoga.ge/', '_blank');">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 48 47">
                              <circle cx="24" cy="23" r="22" fill="white" />
                           <path fill="#fff" stroke="white" d="M24.156 46.5c-12.675 0-23-10.308-23-23 0-12.693 10.307-23 23-23 12.675 0 23 10.308 23 23s-10.325 23-23 23zm0-45.217c-12.244 0-22.217 9.973-22.217 22.217 0 12.244 9.973 22.218 22.217 22.218 12.244 0 22.218-9.974 22.218-22.218S36.4 1.283 24.155 1.283z"/>
