--- a/test/wwwroot/css/site.css
+++ b/test/wwwroot/css/site.css
@@ -66,7 +66,7 @@ html, body {
 }
 
 .textStyle {
-    font-family: 'FiraGO-SemiBold';
+    font-family: 'FiraGO-SemiBold' !important;
     font-style: normal;
     font-weight: 700;
     font-size: 21px;
@@ -113,4 +113,9 @@ html, body {
     #LogoSvg {
         width: 180px;
     }
+
+    .categoriesRow {
+        justify-content:center;
+    }
+
 }
